@@ -52,6 +52,18 @@ name|numSearches
 init|=
 literal|0
 decl_stmt|;
+DECL|field|startMillis
+specifier|public
+specifier|static
+name|long
+name|startMillis
+decl_stmt|;
+DECL|field|lastMillis
+specifier|public
+specifier|static
+name|long
+name|lastMillis
+decl_stmt|;
 DECL|method|CountingSearchTestTask
 specifier|public
 name|CountingSearchTestTask
@@ -97,9 +109,38 @@ name|void
 name|incrNumSearches
 parameter_list|()
 block|{
+name|lastMillis
+operator|=
+name|System
+operator|.
+name|currentTimeMillis
+argument_list|()
+expr_stmt|;
+if|if
+condition|(
+literal|0
+operator|==
+name|numSearches
+condition|)
+name|startMillis
+operator|=
+name|lastMillis
+expr_stmt|;
 name|numSearches
 operator|++
 expr_stmt|;
+block|}
+DECL|method|getElapsedMillis
+specifier|public
+name|long
+name|getElapsedMillis
+parameter_list|()
+block|{
+return|return
+name|lastMillis
+operator|-
+name|startMillis
+return|;
 block|}
 block|}
 end_class
